Fixed the projects animations, changed overflow to scroll regardless of whether or not overflow occurs

--- a/app/app.styl
+++ b/app/app.styl
@@ -85,6 +85,7 @@ html, body
   font-size 14px
   line-height 125%
   font-family 'Open Sans', sans-serif
+  overflow-y scroll
   
 p
   margin 0 0 10px
@@ -665,12 +666,39 @@ hr
     margin-bottom 20px
   
 .project-box-wrapper-1
+  
+  margin-right 0
+  
+  &.ng-enter, &.ng-leave
+    vendor-transition-delay(0s)
+    vendor-transition-property("all")
+    vendor-transition-timing-function(ease-out)
+    vendor-transition-duration(0.6s)
+    position: relative;
+    display: block;
+    overflow: hidden;
+    text-overflow: clip;
+    white-space:nowrap; 
+   
+  &.ng-leave.ng-leave-active, &.ng-enter
+    opacity 0
+    margin-right -33.33333333%
+   
+  &.ng-enter.ng-enter-active, &.ng-leave
+    opacity 1
+    margin-right 0
+
+
+.project-box-wrapper-2
   padding 10px
     
-.project-box-wrapper-2
+.project-box-wrapper-3
   position relative
-  width 100%
   padding-bottom 65.25%
+  
+.project-box-wrapper-4
+  width 100%
+  height 100%
 
 .project-box
   background-size cover
